--- a/src/main/ml-modules/root/client/app/adhoc/adhoc.html
+++ b/src/main/ml-modules/root/client/app/adhoc/adhoc.html
@@ -31,9 +31,18 @@
           <div ng-show="textFields.length">
             <div ng-repeat="item in textFields" class="form-group">
               <label for="input{{index+1}}">{{ item[0] }}</label>
-              <select ng-if="item[2] == 'boolean'" ng-model="inputField[$index+1]" class="form-control" ng-options="item for item in ['','true', 'false']"></select>
-              <input ng-if="item[2] == 'text'"  type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
-              <input ng-if="item[2] == 'number'"  type="number" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
+
+              <div ng-if="item[3] == 'yes'">
+                <input type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="From"/>
+                <input class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="To"/>
+              </div>
+
+              <div ng-if="item[3] != 'yes'">
+                <select ng-if="item[2] == 'boolean'" ng-model="inputField[$index+1]" class="form-control" ng-options="item for item in ['','true', 'false']"></select>
+                <input ng-if="item[2] == 'text'"  type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
+                <input ng-if="item[2] == 'number'"  type="number" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
+                <input ng-if="item[2] == 'string'"  type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
+              </div>
             </div>
             <button type="submit" ng-click="clickSearch(form)" class="btn btn-default">Search</button>
           </div>
