--- a/src/main/ml-modules/root/client/app/adhoc/adhoc.html
+++ b/src/main/ml-modules/root/client/app/adhoc/adhoc.html
@@ -33,8 +33,10 @@
               <label for="input{{index+1}}">{{ item[0] }}</label>
 
               <div ng-if="item[3] == 'yes'">
-                <input type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="From"/>
-                <input class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="To"/>
+                <input ng-if="item[2] == 'date'" type="date" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="From"/>
+                <input ng-if="item[2] == 'date'" type="date" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="To"/>
+                <input ng-if="item[2] != 'date'" type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="From"/>
+                <input ng-if="item[2] != 'date'" type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="To"/>
               </div>
 
               <div ng-if="item[3] != 'yes'">
@@ -42,6 +44,7 @@
                 <input ng-if="item[2] == 'text'"  type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
                 <input ng-if="item[2] == 'number'"  type="number" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
                 <input ng-if="item[2] == 'string'"  type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
+                <input ng-if="item[2] == 'date'"  type="date" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
               </div>
             </div>
             <button type="submit" ng-click="clickSearch(form)" class="btn btn-default">Search</button>
