Added support for xs:dateTime

--- a/src/main/ml-modules/root/client/app/adhoc-wizard/adhoc-wizard.html
+++ b/src/main/ml-modules/root/client/app/adhoc-wizard/adhoc-wizard.html
@@ -112,7 +112,7 @@
 								</td>
 								<td ng-if="wizardForm.type == 'Query'">
 										<select class="form-control" ng-model="field.typeData">
-											<option value="date">Date</option>
+											<option value="dateTime">Date</option>
 											<option value="float">Float</option>
 											<option value="int">Integer</option>
 											<option value="string">String</option>
