Add missing data types

--- a/src/main/ml-modules/root/client/app/adhoc/adhoc.html
+++ b/src/main/ml-modules/root/client/app/adhoc/adhoc.html
@@ -45,9 +45,10 @@
               <div ng-if="item[3] != 'yes'" class="form-group">
                 <select ng-if="item[2] == 'boolean'" ng-model="inputField[$index+1]" class="form-control" ng-options="item for item in ['','true', 'false']"></select>
                 <input ng-if="item[2] == 'text'"  type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
-                <input ng-if="item[2] == 'number'"  type="number" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
+                <input ng-if="item[2] == 'int'"  type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
+                <input ng-if="item[2] == 'float'"  type="number" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
                 <input ng-if="item[2] == 'string'"  type="text" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
-                <input ng-if="item[2] == 'date'"  type="date" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
+                <input ng-if="item[2] == 'dateTime'"  type="date" class="form-control" ng-model="inputField[$index+1]" id="input{{index+1}}" placeholder="{{ item[1] }}"/>
               </div>
             </div>
             <button type="submit" ng-click="clickSearch(form)" class="btn btn-default">Search</button>
